# zk-twitter-verifier-002

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/database/entities/: quest-completion.entity.ts  user.entity.ts  verification.entity.ts
backend/src/quest/: quest.controller.ts  quest.module.ts  quest.service.ts
backend/src/quest/dto/: submit-quest.dto.ts
backend/src/verification/: verification.controller.ts  verification.module.ts  verification.service.ts
backend/src/verification/dto/: save-verification.dto.ts  submit-proof.dto.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: twitter_profile.tlsn.wasm
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ConnectWallet.tsx  QuestCard.tsx  QuestList.tsx  TweetInput.tsx  VerifyTwitter.tsx
frontend/src/config/: wagmi.ts
frontend/src/hooks/: useExtension.ts  useTlsn.ts  useWallet.ts
frontend/src/services/: api.ts
frontend/src/types/: tlsn.d.ts
plugins/quest-1-profile/: config.json
plugins/quest-2-tweet/: config.json
plugins/quest-3-engagement/: config.json
verifier/: Cargo.toml  Dockerfile
verifier/src/: main.rs  verify.rs
